Fix #19788 - [Feature] Packaging report update

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -27,6 +27,8 @@ absence = Abwesenheit
 
 acceptance = AKZEPTANZ DIESER SPEZIFIKATION UND GARANTIE
 
+accuracyInfos = Mit diesem Dokument best\u00E4tige ich die Richtigkeit dieser Informationen.
+
 acv = LZA
 
 address = Adresse
@@ -99,6 +101,10 @@ canContain = Kann enthalten :
 
 caskStrength = Unverd\u00FCnnt?
 
+cdlFreq = Frequenz
+
+cdlQty = Zu kontrollierende Menge
+
 certificatAgence = Agentur f\u00FCr Zertifizierung
 
 certificatStandart = Standard der Zertifizierung
@@ -135,7 +141,7 @@ chapterIntDimensions = Innenma\u00DFe
 
 chapterLabelClaims = BEHAUPTUNGEN / BESCHEINIGUNG
 
-chapterMaterial = Material
+chapterMaterial = Materialien
 
 chapterMicrobio = MIKROBIOLOGISCHE EIGENSCHAFTEN
 
@@ -160,6 +166,8 @@ chapterRMOrigin = HERKUNFT VON ROHMATERIALIEN
 chapterRawMaterialOrigin = ROHSTOFF HERKUNFT
 
 chapterSamplesValidation = VALIDIERUNGSPROBEN
+
+chapterSorting = Sortieren und Markieren
 
 chapterSynthesis = SYNTHESE
 
@@ -432,6 +440,10 @@ materials = MATERIALIEN
 
 maxi = Maxi
 
+mention = Erw\u00E4hnen Sie
+
+mentions = MENTIONEN
+
 method = Verfahren
 
 mgrPackaging = Verpackung Mgr
@@ -515,6 +527,10 @@ packagingGroupCode = Code Verpackungsgruppe
 
 packagingStaples = Verpackungsklammern
 
+packagingType = Art der Verpackung/Verpackung:
+
+packagingTypeDescription = Beschreibung des Verpackungstyps
+
 page = Seite :
 
 palletBoxesPerLayer = Anzahl der Einheiten pro Kartons / Lagen
@@ -569,6 +585,8 @@ pmAdditionalMaterial = Zus\u00E4tzliches Material:
 
 pmCoilDiameter = Spulendurchmesser (mm) :
 
+pmConsumerUsageInstructions = Gebrauchsanweisung f\u00fcr Verbraucher: 
+
 pmCoreDiameter = Futterdurchmesser (mm) :
 
 pmDiameter = Au\u00DFendurchmesser (mm) :
@@ -587,6 +605,14 @@ pmIntLength = Innenl\u00E4nge (mm):
 
 pmIntWidth = Innenbreite (mm):
 
+pmIsPackagingMarkedReturnable = Erw\u00e4hnung "Verpackung / Mehrwegverpackung" markiert (ja / nein): 
+
+pmPackagingRecyclingProcessTypeCode = Art des Verpackungsrecyclingprozesses: 
+
+pmPackagingRecyclingSchemeCode = Recycling-Schemata: 
+
+pmPackagingTermsAndConditionCode = Hinweis auf Mehrwegverpackungen: 
+
 pmPaperWeight = Gewicht (g/m\u00B2):
 
 pmPrintColor = Druckfarbe:
@@ -597,11 +623,19 @@ pmPrintType = Drucktyp:
 
 pmPrintVarnish = Drucklacke : 
 
+pmSortingBonus = Sortierbonus: 
+
+pmSortingInstructions = Sortieranleitung: 
+
+pmSortingMalus = Malus sortieren: 
+
 pmThickness = Dicke (mm) :
 
 pmTypeOther = Finishing :
 
 poids = Herstellungsmenge 100g Produkt
+
+position = Position
 
 poste = Position:
 
@@ -650,6 +684,8 @@ productImage = Produktabbildung
 productPerBox = Produkt / Karton
 
 productQty = Nettogewicht
+
+productUnit = Einheit
 
 projectedQty = Gesch\u00E4tzte Menge
 
