--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
@@ -27,6 +27,8 @@ absence = Missing
 
 acceptance = ACCEPTANCE OF THIS SPECIFICATION AND WARRANTY
 
+accuracyInfos = I hereby certify that this information is correct.
+
 acv = LCA
 
 address = Address
@@ -99,6 +101,10 @@ canContain = May contain :
 
 caskStrength = Undiluted?
 
+cdlFreq = Frequency
+
+cdlQty = Quantity to control
+
 certificatAgence = Certification agency
 
 certificatStandart = Certification standard
@@ -135,7 +141,7 @@ chapterIntDimensions = Internal dimensions
 
 chapterLabelClaims = CLAIMS
 
-chapterMaterial = Material
+chapterMaterial = Materials
 
 chapterMicrobio = MICROBIOLOGICAL CHARACTERISTICS
 
@@ -160,6 +166,8 @@ chapterRMOrigin = ORIGIN OF RAW MATERIALS
 chapterRawMaterialOrigin = RAW MATERIALS ORIGIN
 
 chapterSamplesValidation = SAMPLES VALIDATION
+
+chapterSorting = Sorting and marking
 
 chapterSynthesis = SYNTHESIS
 
@@ -432,6 +440,10 @@ materials = MATERIALS
 
 maxi = Maxi
 
+mention = Mention
+
+mentions = MENTIONS
+
 method = Method
 
 mgrPackaging = Packaging Mgr
@@ -515,6 +527,10 @@ packagingGroupCode = Packaging group code
 
 packagingStaples = Packaging staples
 
+packagingType = Type of packaging:
+
+packagingTypeDescription = Description of the type of packaging
+
 page = Page :
 
 palletBoxesPerLayer = Number of case/layer
@@ -569,6 +585,8 @@ pmAdditionalMaterial = Additional material:
 
 pmCoilDiameter = Coil diameter (mm) : 
 
+pmConsumerUsageInstructions = Consumer usage instructions: 
+
 pmCoreDiameter = Chuck diameter (mm) : 
 
 pmDiameter = External diameter (mm) : 
@@ -587,6 +605,14 @@ pmIntLength = Internal width (mm):
 
 pmIntWidth = Internal width (mm): 
 
+pmIsPackagingMarkedReturnable = Mention "packaging / returnable packaging": 
+
+pmPackagingRecyclingProcessTypeCode = Packaging Recycling Process Type: 
+
+pmPackagingRecyclingSchemeCode = Recycling schemes: 
+
+pmPackagingTermsAndConditionCode = Indication of reusable packaging: 
+
 pmPaperWeight = Weight (g/m\u00B2): 
 
 pmPrintColor = Print color: 
@@ -597,11 +623,19 @@ pmPrintType = Print type:
 
 pmPrintVarnish = Print varnish : 
 
+pmSortingBonus = Sorting bonus: 
+
+pmSortingInstructions = Sorting instructions: 
+
+pmSortingMalus = Sorting malus: 
+
 pmThickness = Thickness (mm) : 
 
 pmTypeOther = Finishing : 
 
 poids = Quantity to manufacture 100g of product
+
+position = Position
 
 poste = Position :
 
@@ -650,6 +684,8 @@ productImage = Product image
 productPerBox = Product/Case
 
 productQty = Net weight
+
+productUnit = unit
 
 projectedQty = Projected qty
 
