--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
@@ -27,6 +27,8 @@ absence = Ausencia
 
 acceptance = ACEPTACI\u00D3N DE ESTE PLIEGO DE CONDICIONES Y DE LA GARANT\u00CDA
 
+accuracyInfos = Certifico que esta informaci\u00F3n es correcta.
+
 acv = ACV
 
 address = Direcci\u00F3n
@@ -99,6 +101,10 @@ canContain = Puede contener :
 
 caskStrength = \u00BFSin diluir?
 
+cdlFreq = Frecuencia
+
+cdlQty = Cantidad a controlar
+
 certificatAgence = Agencia de certificaci\u00F3n
 
 certificatStandart = Norma de certificaci\u00F3n
@@ -135,7 +141,7 @@ chapterIntDimensions = Dimensiones interiores
 
 chapterLabelClaims = ALEGACIONES
 
-chapterMaterial = Material
+chapterMaterial = Materiales
 
 chapterMicrobio = CARACTER\u00CDSTICAS MICROBIOL\u00D3GICAS
 
@@ -160,6 +166,8 @@ chapterRMOrigin = ORIGEN DE LOS MATERIALES CRUDOS
 chapterRawMaterialOrigin = ORIGEN DE MATERIAS PRIMAS
 
 chapterSamplesValidation = MUESTRAS DE VALIDACION
+
+chapterSorting = Clasificaci\u00F3n y marcado
 
 chapterSynthesis = S\u00CDNTESIS
 
@@ -432,6 +440,10 @@ materials = MATERIALES
 
 maxi = M\u00E1xi
 
+mention = Mencione
+
+mentions = MENCIONES
+
 method = M\u00E9todo
 
 mgrPackaging = Embalaje Mgr
@@ -515,6 +527,10 @@ packagingGroupCode = C\u00F3digo del grupo de envasado
 
 packagingStaples = Grapas de embalaje
 
+packagingType = Tipo de envase:
+
+packagingTypeDescription = Descripci\u00F3n del tipo de envase
+
 page = P\u00E1gina :
 
 palletBoxesPerLayer = N\u00FAmero caja/capa
@@ -567,7 +583,9 @@ plantPackerCode = C\u00F3digo del envasador
 
 pmAdditionalMaterial = Material adicional:
 
-pmCoilDiameter = Di\u00E1metro de la bobina (mm) :
+pmCoilDiameter = Di\u00E1metro de la bobina (mm) : 
+
+pmConsumerUsageInstructions = Instrucciones de uso para el consumidor: 
 
 pmCoreDiameter = Di\u00E1metro del mandril (mm) :
 
@@ -587,6 +605,14 @@ pmIntLength = Longitud interior (mm):
 
 pmIntWidth = Anchura interior (mm):
 
+pmIsPackagingMarkedReturnable = Mencione "embalaje / embalaje retornable" marcado (s\u00ed / no): 
+
+pmPackagingRecyclingProcessTypeCode = Tipo de proceso de reciclaje de envases: 
+
+pmPackagingRecyclingSchemeCode = Sistemas de reciclaje: 
+
+pmPackagingTermsAndConditionCode = Indicaci\u00f3n de envases reutilizables:
+
 pmPaperWeight = Peso (g/m\u00B2):
 
 pmPrintColor = Color de impresi\u00F3n :
@@ -597,11 +623,19 @@ pmPrintType = Tipo de impresi\u00F3n :
 
 pmPrintVarnish = Barniz de impresi\u00F3n : 
 
+pmSortingBonus = Bono de clasificaci\u00f3n: 
+
+pmSortingInstructions = Instrucciones de clasificaci\u00f3n: 
+
+pmSortingMalus = Clasificaci\u00f3n malus: 
+
 pmThickness = Espesor (mm) :
 
 pmTypeOther = Acabado :
 
 poids = Cantidad para fabricar 100 g de producto
+
+position = Posici\u00F3n
 
 poste = Posici\u00F3n :
 
@@ -650,6 +684,8 @@ productImage = Imagen del producto
 productPerBox = Producto / Caja
 
 productQty = Peso neto
+
+productUnit = unidad
 
 projectedQty = Cantidad estimada
 
