--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -27,6 +27,8 @@ absence = Poissaolo
 
 acceptance = T\u00C4M\u00C4N ERITELM\u00C4N JA TAKUUN HYV\u00C4KSYMINEN
 
+accuracyInfos = Vakuutan t\u00E4ten, ett\u00E4 n\u00E4m\u00E4 tiedot ovat oikein.
+
 acv = EKA
 
 address = Osoite
@@ -99,6 +101,10 @@ canContain = Voi sis\u00E4lt\u00E4\u00E4 :
 
 caskStrength = Laimentamattomana?
 
+cdlFreq = Taajuus
+
+cdlQty = Valvottava m\u00e4\u00e4r\u00e4
+
 certificatAgence = Sertifiointilaitos
 
 certificatStandart = Sertifiointistandardi
@@ -135,7 +141,7 @@ chapterIntDimensions = Sis\u00E4iset mitat
 
 chapterLabelClaims = VAATIMUKSET
 
-chapterMaterial = Materiaali
+chapterMaterial = Materiaalit
 
 chapterMicrobio = MIKROBIOLOGISET OMINAISUUDET
 
@@ -160,6 +166,8 @@ chapterRMOrigin = RAAKA-AINEIDEN ALKUPER\u00C4
 chapterRawMaterialOrigin = RAAKA-AINEET P\u00C4RITTELY
 
 chapterSamplesValidation = N\u00C4YTTEIDEN VALIDOINTI
+
+chapterSorting = Lajittelu ja merkint\u00E4
 
 chapterSynthesis = SYNTEESI
 
@@ -432,6 +440,10 @@ materials = MATERIAALIT
 
 maxi = Enimm\u00E4isarvo
 
+mention = Maininta
+
+mentions = MUISTUTUKSET
+
 method = Menetelm\u00E4
 
 mgrPackaging = Pakkaus Mgr
@@ -515,6 +527,10 @@ packagingGroupCode = Pakkausryhm\u00E4n koodi
 
 packagingStaples = Nidontapakkaukset
 
+packagingType = Pakkaustyyppi:
+
+packagingTypeDescription = Pakkaustyypin kuvaus
+
 page = Sivu :
 
 palletBoxesPerLayer = Laatikon / kerroksen lukum\u00E4\u00E4r\u00E4
@@ -569,6 +585,8 @@ pmAdditionalMaterial = Lis\u00E4materiaali:
 
 pmCoilDiameter = Kelan halkaisija (mm) : 
 
+pmConsumerUsageInstructions = Kuluttajak\u00e4ytt\u00f6ohjeet: 
+
 pmCoreDiameter = Istukan halkaisija (mm) : 
 
 pmDiameter = Ulkohalkaisija (mm) : 
@@ -587,6 +605,14 @@ pmIntLength = Sis\u00E4inen leveys (mm):
 
 pmIntWidth = Sis\u00E4inen leveys (mm): 
 
+pmIsPackagingMarkedReturnable = Mainitse "pakkaus / palautuspakkaus" merkitty (kyll\u00e4 / ei): 
+
+pmPackagingRecyclingProcessTypeCode = Pakkauksen kierr\u00e4tysprosessin tyyppi: 
+
+pmPackagingRecyclingSchemeCode = Kierr\u00e4tyssuunnitelmat: 
+
+pmPackagingTermsAndConditionCode = Merkinn\u00e4t uudelleenk\u00e4ytett\u00e4vist\u00e4 pakkauksista: 
+
 pmPaperWeight = Paino (g/m\u00B2): 
 
 pmPrintColor = Tulostusv\u00E4ri : 
@@ -597,11 +623,19 @@ pmPrintType = Tulostustyyppi :
 
 pmPrintVarnish = Tulostuslakka : 
 
+pmSortingBonus = Lajittelubonus: 
+
+pmSortingInstructions = Lajitteluohjeet: 
+
+pmSortingMalus = Lajittelu malus: 
+
 pmThickness = Paksuus (mm) : 
 
 pmTypeOther = Viimeistely : 
 
 poids = M\u00E4\u00E4r\u00E4 valmistaa 100 g tuotetta
+
+position = Asema
 
 poste = Sijainti: 
 
@@ -650,6 +684,8 @@ productImage = Tuotteen kuva
 productPerBox = Tuote / laatikko
 
 productQty = Nettopaino
+
+productUnit = yksikk\u00F6
 
 projectedQty = Ennakoitu m\u00E4\u00E4r\u00E4
 
