--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
@@ -27,6 +27,8 @@ absence = Afwezigheid
 
 acceptance = AANVAARDING VAN DEZE SPECIFICATIE EN GARANTIE
 
+accuracyInfos = Hierbij verklaar ik dat deze informatie correct is.
+
 acv = LCA
 
 address = Adres
@@ -99,6 +101,10 @@ canContain = Kan bevatten :
 
 caskStrength = Onverdund?
 
+cdlFreq = Frequentie
+
+cdlQty = Hoeveelheid om te controleren
+
 certificatAgence = Certificeringsbureau
 
 certificatStandart = Certificeringsnorm
@@ -135,7 +141,7 @@ chapterIntDimensions = Binnen afmetingen
 
 chapterLabelClaims = BESCHULDIGINGEN
 
-chapterMaterial = Materiaal
+chapterMaterial = Materialen
 
 chapterMicrobio = MICROBIOLOGISCHE EIGENSCHAPPEN
 
@@ -160,6 +166,8 @@ chapterRMOrigin = HERKOMST VAN GRONDSTOFFEN
 chapterRawMaterialOrigin = RUWE MATERIALEN OORSPRONG
 
 chapterSamplesValidation = MONSTERS VOOR DE VALIDERING
+
+chapterSorting = Sorteren en markeren
 
 chapterSynthesis = SYNTHESE
 
@@ -432,6 +440,10 @@ materials = MATERIALEN
 
 maxi = Max
 
+mention = Vermeld
+
+mentions = VERMELDINGEN
+
 method = Methode
 
 mgrPackaging = Verpakkingsmanager
@@ -515,6 +527,10 @@ packagingGroupCode = Code verpakkingsgroep
 
 packagingStaples = Nietjes verpakken
 
+packagingType = Soort verpakking:
+
+packagingTypeDescription = Beschrijving van het type verpakking
+
 page = Pagina : 
 
 palletBoxesPerLayer = Aantal doos / laag
@@ -569,6 +585,8 @@ pmAdditionalMaterial = Extra materiaal:
 
 pmCoilDiameter = Coil diameter (mm) : 
 
+pmConsumerUsageInstructions = Gebruiksinstructies voor consumenten: 
+
 pmCoreDiameter = Boorkopdiameter (mm) : 
 
 pmDiameter = Buitendiameter (mm) :
@@ -587,6 +605,14 @@ pmIntLength = Binnenlengte (mm):
 
 pmIntWidth = Binnenbreedte (mm): 
 
+pmIsPackagingMarkedReturnable = Vermelding "retourneerbare verpakking": 
+
+pmPackagingRecyclingProcessTypeCode = Type recyclingproces voor verpakkingen: 
+
+pmPackagingRecyclingSchemeCode = Sorteerschema's: 
+
+pmPackagingTermsAndConditionCode = Vermelding van herbruikbare verpakking: 
+
 pmPaperWeight = Gewicht (g/m\u00B2): 
 
 pmPrintColor = Print kleur : 
@@ -597,11 +623,19 @@ pmPrintType = Print type :
 
 pmPrintVarnish = Drukvernis : 
 
+pmSortingBonus = Sorteerbonus: 
+
+pmSortingInstructions = Sorteerinstructies: 
+
+pmSortingMalus = Malus sorteren: 
+
 pmThickness = Dikte (mm) : 
 
 pmTypeOther = Finish : 
 
 poids = Hoeveelheid om 100 g product te produceren
+
+position = Positie
 
 poste = Positie :
 
@@ -650,6 +684,8 @@ productImage = Product afbeelding
 productPerBox = Product/Doos
 
 productQty = Netto gewicht
+
+productUnit = eenheid
 
 projectedQty = Geschatte hoeveelheid
 
