--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
@@ -27,6 +27,8 @@ absence = Aus\u00EAncia
 
 acceptance = ACEITA\u00C7\u00C3O DESTA ESPECIFICA\u00C7\u00C3O E GARANTIA
 
+accuracyInfos = Certifico que estas informa\u00E7\u00F5es s\u00E3o correctas.
+
 acv = ACV
 
 address = Endere\u00E7o
@@ -99,6 +101,10 @@ canContain = Pode conter :
 
 caskStrength = N\u00E3o dilu\u00EDdo?
 
+cdlFreq = Freq\u00fc\u00eancia
+
+cdlQty = Quantidade a controlar
+
 certificatAgence = Ag\u00EAncia de certifica\u00E7\u00E3o
 
 certificatStandart = Norma de certifica\u00E7\u00E3o
@@ -135,7 +141,7 @@ chapterIntDimensions = Dimens\u00F5es internas
 
 chapterLabelClaims = RECLAMA\u00C7\u00D5ES
 
-chapterMaterial = Material
+chapterMaterial = Materiais
 
 chapterMicrobio = CARACTER\u00CDSTICAS MICROBIOL\u00D3GICAS
 
@@ -160,6 +166,8 @@ chapterRMOrigin = ORIGEM DOS MAT\u00C9RIAS-PRIMAS
 chapterRawMaterialOrigin = ORIGEM DE MAT\u00C9RIAS-PRIMAS
 
 chapterSamplesValidation = VALIDA\u00C7\u00C3O DE AMOSTRAS
+
+chapterSorting = Classifica\u00E7\u00E3o e marca\u00E7\u00E3o
 
 chapterSynthesis = S\u00CDNTESE
 
@@ -432,6 +440,10 @@ materials = MATERIAIS
 
 maxi = Maxi
 
+mention = Men\u00E7\u00E3o
+
+mentions = MEN\u00C7\u00D5ES
+
 method = M\u00E9todo
 
 mgrPackaging = Gerente de embalagem
@@ -515,6 +527,10 @@ packagingGroupCode = C\u00F3digo do grupo de embalagem
 
 packagingStaples = Grampos para embalagem
 
+packagingType = Tipo de embalagem:
+
+packagingTypeDescription = Descri\u00E7\u00E3o do tipo de embalagem
+
 page = P\u00E1gina :
 
 palletBoxesPerLayer = N\u00FAmero de caixa / camada
@@ -567,7 +583,9 @@ plantPackerCode = C\u00F3digo do embalador
 
 pmAdditionalMaterial = Material adicional:
 
-pmCoilDiameter = Di\u00E2metro da bobina (mm) :
+pmCoilDiameter = Di\u00E2metro da bobina (mm) : 
+
+pmConsumerUsageInstructions = Instruç\u00f5es de uso do consumidor: 
 
 pmCoreDiameter = Di\u00E2metro do mandril (mm) :
 
@@ -587,6 +605,14 @@ pmIntLength = Largura interna (mm):
 
 pmIntWidth = Largura interna (mm):
 
+pmIsPackagingMarkedReturnable = Mencione \u201Cembalagem / embalagem retorn\u00e1vel\u201D marcada (sim/n\u00f5o): 
+
+pmPackagingRecyclingProcessTypeCode = Tipo de Processo de Reciclagem de Embalagens: 
+
+pmPackagingRecyclingSchemeCode = Esquemas de reciclagem: 
+
+pmPackagingTermsAndConditionCode = Indicaç\u00f5o de embalagem reutiliz\u00e1vel: 
+
 pmPaperWeight = Peso (g / m\u00B2):
 
 pmPrintColor = Cor de impress\u00E3o :
@@ -597,11 +623,19 @@ pmPrintType = Tipo de impress\u00E3o :
 
 pmPrintVarnish = Verniz de impress\u00E3o : 
 
+pmSortingBonus = Classificaç\u00f5o de bonus: 
+
+pmSortingInstructions = Instruç\u00f5es de classificaç\u00f5o: 
+
+pmSortingMalus = Malus de classificaç\u00f5o: 
+
 pmThickness = Espessura (mm) :
 
 pmTypeOther = Acabamento :
 
 poids = Quantidade para fabricar 100g de produto
+
+position = Posi\u00E7\u00E3o
 
 poste = Posi\u00E7\u00E3o:
 
@@ -650,6 +684,8 @@ productImage = Imagem do produto
 productPerBox = Produto / Caixa
 
 productQty = Peso l\u00EDquido
+
+productUnit = unidade
 
 projectedQty = Quantidade projetada
 
