--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -27,6 +27,8 @@ absence = Fr\u00E5nvaro
 
 acceptance = GODK\u00C4NNANDE AV DENNA SPECIFIKATION OCH GARANTI
 
+accuracyInfos = Jag intygar h\u00E4rmed att dessa uppgifter \u00E4r korrekta.
+
 acv = LCA
 
 address = Adress
@@ -99,6 +101,10 @@ canContain = Kan inneh\u00E5lla :\r\n
 
 caskStrength = Outsp\u00E4dd?
 
+cdlFreq = Frekvens
+
+cdlQty = Kvantitet att kontrollera
+
 certificatAgence = Certifieringsorgan
 
 certificatStandart = Certifieringsstandard
@@ -160,6 +166,8 @@ chapterRMOrigin = R\u00C5VARANS URSPRUNG
 chapterRawMaterialOrigin = R\u00C5MATERIALETS URSPRUNG
 
 chapterSamplesValidation = PROV VALIDATION
+
+chapterSorting = Sortering och m\u00E4rkning
 
 chapterSynthesis = SYNTES
 
@@ -432,6 +440,10 @@ materials = MATERIAL
 
 maxi = Max
 
+mention = Omn\u00E4mnande
+
+mentions = MENINGAR
+
 method = Metod
 
 mgrPackaging = F\u00F6rpackning Mgr
@@ -515,6 +527,10 @@ packagingGroupCode = Kod f\u00F6r f\u00F6rpackningsgrupp
 
 packagingStaples = F\u00F6rpacknings h\u00E4ftklamrar
 
+packagingType = Typ av f\u00F6rpackning:
+
+packagingTypeDescription = Beskrivning av typ av f\u00F6rpackning
+
 page = Sida :
 
 palletBoxesPerLayer = Antal l\u00E5da / lager
@@ -569,6 +585,8 @@ pmAdditionalMaterial = Ytterligare material:
 
 pmCoilDiameter = Spindiameter (mm) : 
 
+pmConsumerUsageInstructions = Användningsinstruktioner för konsumenter: 
+
 pmCoreDiameter = Chuckdiameter (mm) : 
 
 pmDiameter = Yttre diameter (mm) : 
@@ -587,6 +605,14 @@ pmIntLength = Intern bredd (mm):
 
 pmIntWidth = Intern bredd (mm): 
 
+pmIsPackagingMarkedReturnable = Nämn "förpackning / returemballage" markerad (ja / nej): 
+
+pmPackagingRecyclingProcessTypeCode = Förpackningsåtervinningsprocesstyp: 
+
+pmPackagingRecyclingSchemeCode = Återvinningsprogram: 
+
+pmPackagingTermsAndConditionCode = Angivande av återanvändningsbar förpackning: 
+
 pmPaperWeight = Vikt (g/m\u00B2): 
 
 pmPrintColor = Utskriftsf\u00E4rg : 
@@ -597,11 +623,19 @@ pmPrintType = Utskrifttyp :
 
 pmPrintVarnish = \u041F\u0435\u0447\u0430\u0442\u043D\u044B\u0439 \u043B\u0430\u043A : 
 
+pmSortingBonus = Sorteringsbonus: 
+
+pmSortingInstructions = Sorteringsinstruktioner: 
+
+pmSortingMalus = Sorterar malus: 
+
 pmThickness = Tjocklek (mm) : 
 
 pmTypeOther = Efterbehandling : 
 
 poids = Kvantitet f\u00F6r att tillverka 100 g produkt
+
+position = Position
 
 poste = Position: 
 
@@ -650,6 +684,8 @@ productImage = Produktbild
 productPerBox = Produkt / Box
 
 productQty = Nettovikt
+
+productUnit = enhet
 
 projectedQty = Projicerad antal
 
