--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -27,6 +27,8 @@ absence = \u7F3A\u5E2D
 
 acceptance = \u63A5\u53D7\u672C\u89C4\u8303\u548C\u4FDD\u8BC1
 
+accuracyInfos = \u6211\u7279\u6B64\u8BC1\u660E\u8FD9\u4E9B\u4FE1\u606F\u6B63\u786E\u65E0\u8BEF\u3002
+
 acv = LCA
 
 address = \u5730\u5740
@@ -99,6 +101,10 @@ canContain = \u53EF\u80FD\u542B\u6709 \uFF1A
 
 caskStrength = \u672A\u7A00\u91CA\uFF1F
 
+cdlFreq = \u9891\u7387
+
+cdlQty = \u6570\u91cf\u8981\u63a7\u5236
+
 certificatAgence = \u8BA4\u8BC1\u673A\u6784
 
 certificatStandart = \u8BA4\u8BC1\u6807\u51C6
@@ -160,6 +166,8 @@ chapterRMOrigin = \u539F\u59CB\u6750\u6599\u7684\u6765\u6E90
 chapterRawMaterialOrigin = \u539F\u6750\u6599\u6765\u6E90
 
 chapterSamplesValidation = \u6837\u54C1\u9A8C\u8BC1
+
+chapterSorting = \u5206\u7C7B\u548C\u6807\u8BB0
 
 chapterSynthesis = \u5408\u6210
 
@@ -432,6 +440,10 @@ materials = \u6750\u6599
 
 maxi = \u9A6C\u514B\u897F
 
+mention = \u63D0\u53CA
+
+mentions = \u63D0\u540D
+
 method = \u65B9\u6CD5
 
 mgrPackaging = \u5305\u88C5\u7ECF\u7406
@@ -515,6 +527,10 @@ packagingGroupCode = \u5305\u88C5\u7EC4\u4EE3\u7801
 
 packagingStaples = \u5305\u88C5\u9489\u4E66\u9489
 
+packagingType = \u5305\u88C5\u7C7B\u578B\uFF1A
+
+packagingTypeDescription = \u5305\u88C5\u7C7B\u578B\u8BF4\u660E
+
 page = \u9875\uFF1A
 
 palletBoxesPerLayer = \u7BB1\u6570/\u5C42\u6570
@@ -569,6 +585,8 @@ pmAdditionalMaterial = \u9644\u52A0\u6750\u6599\uFF1A
 
 pmCoilDiameter = \u7EBF\u5708\u76F4\u5F84\uFF08mm\uFF09\uFF1A 
 
+pmConsumerUsageInstructions = \u6D88\u8D39\u8005\u4F7F\u7528\u8BF4\u660E: 
+
 pmCoreDiameter = \u5361\u76D8\u76F4\u5F84\uFF08mm\uFF09\uFF1A 
 
 pmDiameter = \u5916\u5F84\uFF08mm\uFF09\uFF1A 
@@ -587,6 +605,14 @@ pmIntLength = \u5185\u90E8\u5BBD\u5EA6\uFF08\u6BEB\u7C73\uFF09\uFF1A
 
 pmIntWidth = \u5185\u90E8\u5BBD\u5EA6\uFF08\u6BEB\u7C73\uFF09\uFF1A 
 
+pmIsPackagingMarkedReturnable = \u63D0\u53CA\u201C\u53EF\u9000\u56DE\u5305\u88C5\u201D: 
+
+pmPackagingRecyclingProcessTypeCode = \u5305\u88C5\u56DE\u6536\u8FC7\u7A0B\u7684\u7C7B\u578B: 
+
+pmPackagingRecyclingSchemeCode = \u5206\u7C7B\u65B9\u6848: 
+
+pmPackagingTermsAndConditionCode = \u53EF\u91CD\u590D\u4F7F\u7528\u5305\u88C5\u7684\u6307\u793A: 
+
 pmPaperWeight = \u91CD\u91CF\uFF08g / m  u00B2\uFF09\uFF1A 
 
 pmPrintColor = \u5370\u5237\u989C\u8272 \uFF1A 
@@ -597,11 +623,19 @@ pmPrintType = \u5217\u5370\u7C7B\u578B \uFF1A
 
 pmPrintVarnish = \u5370\u5237\u6E05\u6F06 : 
 
+pmSortingBonus = \u6392\u5E8F\u5956\u91D1: 
+
+pmSortingInstructions = \u6392\u5E8F\u8BF4\u660E: 
+
+pmSortingMalus = \u5206\u9009\u82F9\u679C: 
+
 pmThickness = \u539A\u5EA6\uFF08\u6BEB\u7C73\uFF09\uFF1A 
 
 pmTypeOther = \u7CBE\u52A0\u5DE5 \uFF1A 
 
 poids = \u751F\u4EA7100\u514B\u4EA7\u54C1\u7684\u6570\u91CF
+
+position = \u804C\u4F4D
 
 poste = \u4F4D\u7F6E \uFF1A
 
@@ -650,6 +684,8 @@ productImage = \u4EA7\u54C1\u56FE\u7247
 productPerBox = \u4EA7\u54C1/\u76D2
 
 productQty = \u51C0\u91CD
+
+productUnit = \u5355\u4F4D
 
 projectedQty = \u9884\u8BA1\u6570\u91CF
 
