--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -27,6 +27,8 @@ absence = Absence
 
 acceptance = VALIDATION DE CETTE SP\u00C9CIFICATION
 
+accuracyInfos = Par le pr\u00E9sent document, j\u2019atteste l\u2019exactitude de ces informations.
+
 acv = ACV
 
 address = Adresse
@@ -99,6 +101,10 @@ canContain = Peut contenir :
 
 caskStrength = Non dilu\u00E9e ?
 
+cdlFreq = Fr\u00E9quence
+
+cdlQty = Quantit\u00E9 \u00e0 contr\u00f4ler
+
 certificatAgence = Agence de certification
 
 certificatStandart = Standard de certification
@@ -135,7 +141,7 @@ chapterIntDimensions = Dimensions int\u00E9rieures
 
 chapterLabelClaims = ALL\u00C9GATIONS
 
-chapterMaterial = Mat\u00E9riau
+chapterMaterial = Mat\u00E9riaux
 
 chapterMicrobio = CARACT\u00C9RISTIQUES MICROBIOLOGIQUES
 
@@ -160,6 +166,8 @@ chapterRMOrigin = ORIGINE DES MATIERES PREMIERES
 chapterRawMaterialOrigin = ORIGINE DES MATI\u00C8RES PREMI\u00C8RES
 
 chapterSamplesValidation = VALIDATION \u00C9CHANTILLONS
+
+chapterSorting = Tri et marquage
 
 chapterSynthesis = SYNTH\u00C8SE
 
@@ -432,6 +440,10 @@ materials = MAT\u00C9RIAUX
 
 maxi = Maxi
 
+mention = Mention
+
+mentions = MENTIONS
+
 method = M\u00E9thode
 
 mgrPackaging = Resp. emballage
@@ -515,6 +527,10 @@ packagingGroupCode = Code groupe emballage
 
 packagingStaples = Pr\u00E9sence d'agrafes
 
+packagingType = Type d'emballage / conditionnement:
+
+packagingTypeDescription = Description du type d'emballage
+
 page = Page :
 
 palletBoxesPerLayer = Nombre colis/couche
@@ -569,6 +585,8 @@ pmAdditionalMaterial = Mat\u00E9riau suppl\u00E9mentaire :
 
 pmCoilDiameter = Diam\u00E8tre de bobine (mm) :\u00A0
 
+pmConsumerUsageInstructions = Instructions d'utilisation pour les consommateurs : 
+
 pmCoreDiameter = Diam\u00E8tre mandrin (mm) :\u00A0
 
 pmDiameter = Diam\u00E8tre ext\u00E9rieur (mm) :\u00A0
@@ -587,6 +605,14 @@ pmIntLength = Longueur int\u00E9rieure (mm) :\u00A0
 
 pmIntWidth = Largeur int\u00E9rieure (mm) :\u00A0
 
+pmIsPackagingMarkedReturnable = Mention "colis / conditionnement retournable" : 
+
+pmPackagingRecyclingProcessTypeCode = Type de processus de recyclage des emballages : 
+
+pmPackagingRecyclingSchemeCode = Schemas de tri : 
+
+pmPackagingTermsAndConditionCode = Indication d'emballage r\u00E9utilisable : 
+
 pmPaperWeight = Grammage (g/m\u00B2) :\u00A0
 
 pmPrintColor = Couleur d'impression : 
@@ -597,11 +623,19 @@ pmPrintType = Type d'impression :
 
 pmPrintVarnish = Vernis : 
 
+pmSortingBonus = Bonus tri : 
+
+pmSortingInstructions = Consignes de tri : 
+
+pmSortingMalus = Malus tri : 
+
 pmThickness = Epaisseur (mm) :\u00A0
 
 pmTypeOther = Finition : 
 
 poids = Quantit\u00E9 pour fabriquer 100 g de produit
+
+position = Position
 
 poste = Poste :
 
@@ -650,6 +684,8 @@ productImage = Image du produit
 productPerBox = UVC/Colis
 
 productQty = Poids net UVC
+
+productUnit = Unit\u00E9
 
 projectedQty = Quantit\u00E9 pr\u00E9visionnelle
 
