--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -27,6 +27,8 @@ absence = Assenza
 
 acceptance = ACCETTAZIONE DI QUESTA SPECIFICA E GARANZIA
 
+accuracyInfos = Con la presente certifico che queste informazioni sono corrette.
+
 acv = ACV
 
 address = Indirizzo
@@ -99,6 +101,10 @@ canContain = Pu\u00F2 contenere :
 
 caskStrength = Non diluito?
 
+cdlFreq = Frequenza
+
+cdlQty = Quantit\u00e0 da controllare
+
 certificatAgence = Agenzia di certificazione
 
 certificatStandart = Standard di certificazione
@@ -135,7 +141,7 @@ chapterIntDimensions = Dimensioni interne
 
 chapterLabelClaims = AFFERMAZIONI
 
-chapterMaterial = Materiale
+chapterMaterial = I materiali
 
 chapterMicrobio = CARATTERISTICHE MICROBIOLOGICHE
 
@@ -160,6 +166,8 @@ chapterRMOrigin = ORIGINE DELLE MATERIE PRIME
 chapterRawMaterialOrigin = MATERIE PRIME ORIGINALI
 
 chapterSamplesValidation = CAMPIONI DI VALIDAZIONE
+
+chapterSorting = Smistamento e marcatura
 
 chapterSynthesis = SINTESI
 
@@ -432,6 +440,10 @@ materials = MATERIALI
 
 maxi = Massi
 
+mention = Menzione
+
+mentions = MENZIONI
+
 method = Metodo
 
 mgrPackaging = Confezione mons
@@ -515,6 +527,10 @@ packagingGroupCode = Codice del gruppo di imballaggio
 
 packagingStaples = Graffette per imballaggio
 
+packagingType = Tipo di imballaggio:
+
+packagingTypeDescription = Descrizione del tipo di imballaggio
+
 page = Pagina :
 
 palletBoxesPerLayer = Numero scatola/strato
@@ -567,7 +583,9 @@ plantPackerCode = Codice imballatore
 
 pmAdditionalMaterial = Materiale aggiuntivo:
 
-pmCoilDiameter = Diametro bobina (mm) :
+pmCoilDiameter = Diametro bobina (mm) : 
+
+pmConsumerUsageInstructions = Istruzioni per l'uso da parte del consumatore:
 
 pmCoreDiameter = Diametro del mandrino (mm) :
 
@@ -587,6 +605,14 @@ pmIntLength = Lunghezza interna (mm):
 
 pmIntWidth = Larghezza interna (mm):
 
+pmIsPackagingMarkedReturnable = Menzione "imballaggio / imballaggio restituibile" contrassegnato (s\u00ec / no): 
+
+pmPackagingRecyclingProcessTypeCode = Tipo di processo di riciclaggio degli imballaggi: 
+
+pmPackagingRecyclingSchemeCode = Schemi di riciclaggio: 
+
+pmPackagingTermsAndConditionCode = Indicazione di imballaggi riutilizzabili: 
+
 pmPaperWeight = Peso (g/m\u00B2):
 
 pmPrintColor = Stampa a colori :
@@ -597,11 +623,19 @@ pmPrintType = Tipo di stampa :
 
 pmPrintVarnish = Vernice per la stampa : 
 
+pmSortingBonus = Bonus di selezione: 
+
+pmSortingInstructions = Istruzioni per l'ordinamento:
+
+pmSortingMalus = Malus di ordinamento: 
+
 pmThickness = Spessore (mm) :
 
 pmTypeOther = Finitura :
 
 poids = Quantit\u00E0 per la produzione di 100 g di prodotto
+
+position = Posizione
 
 poste = Posizione:
 
@@ -650,6 +684,8 @@ productImage = Immagine del prodotto
 productPerBox = Prodotto / Box
 
 productQty = Peso netto
+
+productUnit = unit\u00E0
 
 projectedQty = Quantit\u00E0 stimata
 
