Fix #24418 - [Assistance] Added gs1:servingSuggestion field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -255,6 +255,7 @@ gs1_gs1Model.property.gs1_secondaryWeight.title                                 
 gs1_gs1Model.property.gs1_secondaryWidth.title                                            = Largeur (mm)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.description                                = Indication de l\u2019unit\u00E9 de mesure qui doit \u00EAtre utilis\u00E9e pour facturer l\u2019unit\u00E9 commerciale (pour les unit\u00E9s commerciales non vendues \u00E0 la pi\u00E8ce) (kg, m, m\u00B2, m3, l, \u2026)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.title                                      = Unit\u00E9 de mesure utilis\u00E9e pour la Facture
+gs1_gs1Model.property.gs1_servingSuggestion.title  	                                      = Suggestion de pr\u00E9sentation
 gs1_gs1Model.property.gs1_sortingBonusCriteria.title                                      = Bonus tri
 gs1_gs1Model.property.gs1_sortingInstructions.title                                       = Consignes de tri
 gs1_gs1Model.property.gs1_sortingMalusCriteria.title                                      = Malus tri
