Fix #24333 - [Feature] Citeo professional export

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -42,6 +42,7 @@ path.ecoreports                          = Rapports sur les OM
 path.exchange                            = Echange
 path.exportallergens                     = Export des allerg\u00E8nes
 path.exportciteo                         = Export des mat\u00E9riaux d'emballage (Citeo)
+path.exportciteopro                      = Export des mat\u00E9riaux d'emballage (Citeo Professionnel)
 path.exportclientscorelist               = Export des \u00E9valuations clients
 path.exportclientsurvey                  = Export des questionnaires clients
 path.exportcompositionpackaging          = Export des listes composition et emballages
