--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -73,6 +73,7 @@ data.list.exchange                            = Echange
 data.list.expenseList                         = D\u00E9penses
 data.list.exportallergens                     = Export des allerg\u00E8nes
 data.list.exportciteo                         = Export des mat\u00E9riaux d'emballage (Citeo)
+data.list.exportciteopro                      = Export des mat\u00E9riaux d'emballage (Citeo Professionnel)
 data.list.exportcompositionpackaging          = Export des listes composition et emballages
 data.list.exportinglist                       = Export des ingr\u00E9dients
 data.list.exportlabelclaimlist                = Export des all\u00E9gations
