Fix #24591 - [Bug] Add geo transfo in product specification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -78,6 +78,7 @@ bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluant
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Origines bio
 bcpg_bcpgmodel.association.bcpg_filGeoOrigins.title                             = Origines g\u00E9o
+bcpg_bcpgmodel.association.bcpg_filGeoTransfo.title                             = Pays de transfo
 bcpg_bcpgmodel.association.bcpg_filIngs.title                                   = Ingr\u00E9dients
 bcpg_bcpgmodel.association.bcpg_filRequiredGeoOrigins.title                     = Origines g\u00E9o requises
 bcpg_bcpgmodel.association.bcpg_glopTargetCharact.title                         = Cible d'optimisation
