Fix #13550 - [Feature] Update aging report, quality control

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_de.properties
@@ -35,6 +35,10 @@ counter_analysis = Z\u00C4HLERANALYSE
 
 criteria = Kriterium
 
+day = Tage
+
+days = Tag
+
 dimension = MASSE
 
 folder = Mappe:
@@ -50,6 +54,10 @@ method = METHODE
 method1 = Methode
 
 mini = Mini
+
+month = Monat
+
+months = Monate
 
 orderId = Bestellnummer:
 
