--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fi.properties
@@ -35,6 +35,10 @@ counter_analysis = VASTAANALYYSI
 
 criteria = Kriteeri
 
+day = P\u00E4iv\u00E4\u00E4
+
+days = P\u00E4iv\u00E4
+
 dimension = MITAT
 
 folder = Kansio:
@@ -50,6 +54,10 @@ method = MENETELM\u00C4
 method1 = Menetelm\u00E4
 
 mini = Mini
+
+month = Kuukausi
+
+months = Kuukautta
 
 orderId = Tilausnumero:
 
