--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fr.properties
@@ -35,6 +35,10 @@ counter_analysis = CONTRE ANALYSE
 
 criteria = Crit\u00E8re
 
+day = J
+
+days = J
+
 dimension = DIMENSIONS
 
 folder = Dossier : 
@@ -50,6 +54,10 @@ method = M\u00C9THODE
 method1 = M\u00E9thode
 
 mini = Mini
+
+month = M
+
+months = M
 
 orderId = N\u00B0 de commande : 
 
