--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_it.properties
@@ -35,6 +35,10 @@ counter_analysis = ANALISI DEL CONTATORE
 
 criteria = Criterio
 
+day = G
+
+days = G
+
 dimension = DIMENSIONI
 
 folder = Cartella:
@@ -50,6 +54,10 @@ method = METODO
 method1 = Metodo
 
 mini = Mini
+
+month = M
+
+months = M
 
 orderId = Numero d'ordine:
 
