--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_nl.properties
@@ -35,6 +35,10 @@ counter_analysis = COUNTER ANALYSE
 
 criteria = criterium
 
+day = Dagen
+
+days = Dag
+
 dimension = AFMETINGEN
 
 folder = map:
@@ -50,6 +54,10 @@ method = METHODE
 method1 = methode
 
 mini = min
+
+month = Maand
+
+months = Maanden
 
 orderId = Order-ID:
 
