--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_sv_SE.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_sv_SE.properties
@@ -35,6 +35,10 @@ counter_analysis = COUNTER ANALYS
 
 criteria = Temperatur
 
+day = Dagar
+
+days = Dag
+
 dimension = M\u00C5TT
 
 folder = Mapp:
@@ -50,6 +54,10 @@ method = METOD
 method1 = Metod
 
 mini = Mini
+
+month = M\u00E5nad
+
+months = M\u00E5nader
 
 orderId = Ordernummer:
 
