--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_es.properties
@@ -35,6 +35,10 @@ counter_analysis = AN\u00C1LISIS DE CONTADOR
 
 criteria = Criterio
 
+day = Dias
+
+days = Dia
+
 dimension = DIMENSIONES
 
 folder = Carpeta:
@@ -50,6 +54,10 @@ method = M\u00C9TODO
 method1 = M\u00E9todo
 
 mini = Mini
+
+month = Mes
+
+months = Meses
 
 orderId = N\u00FAmero de orden:
 
