--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_pt.properties
@@ -35,6 +35,10 @@ counter_analysis = AN\u00C1LISE DO CONTADOR
 
 criteria = Crit\u00E9rio
 
+day = D
+
+days = D
+
 dimension = DIMENS\u00D5ES
 
 folder = Pasta:
@@ -50,6 +54,10 @@ method = M\u00C9TODO
 method1 = Metodo
 
 mini = Mini
+
+month = M
+
+months = M
 
 orderId = N\u00FAmero do pedido:
 
