Fix #13550 - [Feature] Update aging report

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_de.properties
@@ -33,6 +33,8 @@ contaminant = Kontaminanten
 
 counter_analysis = Z\u00C4HLERANALYSE
 
+created = Erstellt :
+
 criteria = Kriterium
 
 day = Tage
@@ -44,8 +46,6 @@ dimension = MASSE
 folder = Mappe:
 
 line = Linie :
-
-manufacturingDate = Herstellungsdatum :
 
 maxi = Maxi
 
