--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_es.properties
@@ -33,6 +33,8 @@ contaminant = CONTAMINANTES
 
 counter_analysis = AN\u00C1LISIS DE CONTADOR
 
+created = Creado el :
+
 criteria = Criterio
 
 day = Dias
@@ -44,8 +46,6 @@ dimension = DIMENSIONES
 folder = Carpeta:
 
 line = L\u00EDnea:
-
-manufacturingDate = Fecha de fabricaci\u00F3n :
 
 maxi = Maxi
 
