--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fi.properties
@@ -33,6 +33,8 @@ contaminant = VIERASAINEET
 
 counter_analysis = VASTAANALYYSI
 
+created = Luotu :
+
 criteria = Kriteeri
 
 day = P\u00E4iv\u00E4\u00E4
@@ -44,8 +46,6 @@ dimension = MITAT
 folder = Kansio:
 
 line = Rivi:
-
-manufacturingDate = Valmistusp\u00E4iv\u00E4 :
 
 maxi = Maxi
 
