--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_fr.properties
@@ -33,6 +33,8 @@ contaminant = CONTAMINANTS
 
 counter_analysis = CONTRE ANALYSE
 
+created = Cr\u00E9\u00E9 le :
+
 criteria = Crit\u00E8re
 
 day = J
@@ -44,8 +46,6 @@ dimension = DIMENSIONS
 folder = Dossier : 
 
 line = Ligne :
-
-manufacturingDate = Date de fabrication : 
 
 maxi = Maxi
 
