--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_it.properties
@@ -33,6 +33,8 @@ contaminant = CONTAMINANTI
 
 counter_analysis = ANALISI DEL CONTATORE
 
+created = Creato il :
+
 criteria = Criterio
 
 day = G
@@ -44,8 +46,6 @@ dimension = DIMENSIONI
 folder = Cartella:
 
 line = Linea:
-
-manufacturingDate = Data di produzione :
 
 maxi = Maxi
 
