--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_nl.properties
@@ -33,6 +33,8 @@ contaminant = VERONTREINIGINGEN
 
 counter_analysis = COUNTER ANALYSE
 
+created = Creatiedatum :
+
 criteria = criterium
 
 day = Dagen
@@ -44,8 +46,6 @@ dimension = AFMETINGEN
 folder = map:
 
 line = lijn:
-
-manufacturingDate = fabricagedatum:
 
 maxi = Max
 
