--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_pt.properties
@@ -33,6 +33,8 @@ contaminant = CONTAMINANTES
 
 counter_analysis = AN\u00C1LISE DO CONTADOR
 
+created = Criada :
+
 criteria = Crit\u00E9rio
 
 day = D
@@ -44,8 +46,6 @@ dimension = DIMENS\u00D5ES
 folder = Pasta:
 
 line = Linha :
-
-manufacturingDate = Data de fabrica\u00E7\u00E3o :
 
 maxi = Maxi
 
