--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_sv_SE.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_sv_SE.properties
@@ -33,6 +33,8 @@ contaminant = FR\u00C4MMANDE
 
 counter_analysis = COUNTER ANALYS
 
+created = Skapad :
+
 criteria = Temperatur
 
 day = Dagar
@@ -44,8 +46,6 @@ dimension = M\u00C5TT
 folder = Mapp:
 
 line = Linje:
-
-manufacturingDate = Tillverkningsdatum :
 
 maxi = Maxi
 
