--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_ru.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport_ru.properties
@@ -33,6 +33,8 @@ contaminant = \u041A\u041E\u041D\u0422\u0410\u041C\u0418\u041D\u0410\u041D\u0422
 
 counter_analysis = \u041A\u041E\u041D\u0422\u0420\u041E\u041B\u042C\u041D\u042B\u0419 \u0410\u041D\u0410\u041B\u0418\u0417
 
+created = \u0421\u043E\u0437\u0434\u0430\u043D\u043E :
+
 criteria = \u0442\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0430
 
 day = D
@@ -44,8 +46,6 @@ dimension = \u0420\u0410\u0417\u041C\u0415\u0420\u042B
 folder = \u041F\u0430\u043F\u043A\u0430:
 
 line = \u041B\u0438\u043D\u0438\u044F :
-
-manufacturingDate = \u0414\u0430\u0442\u0430 \u0438\u0437\u0433\u043E\u0442\u043E\u0432\u043B\u0435\u043D\u0438\u044F :
 
 maxi = \u041C\u0430\u043A\u0441\u0438
 
