--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -295,6 +295,7 @@ entity.activity.datalist.delete  = A supprim\u00E9 {0} dans la liste {1}
 entity.activity.datalist.simple  = A modifi\u00E9 la liste {0}
 entity.activity.datalist.update  = A modifi\u00E9 {0} dans la liste {1} 
 entity.activity.entity           = A modifi\u00E9 les propri\u00E9t\u00E9s de l''entit\u00E9 {0} 
+entity.activity.entity.create    = A cr\u00E9\u00E9 l''entit\u00E9 {0}
 entity.activity.formulation      = A formul\u00E9 {0} 
 entity.activity.merge            = A rang\u00E9 la version {0}
 entity.activity.property         = Propri\u00E9t\u00E9
