InProgress #22637 - [Feature] Add laboratories management in stock

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -604,6 +604,8 @@ bcpg_bcpgmodel.type.bcpg_labelingRuleList.description                           
 bcpg_bcpgmodel.type.bcpg_labelingRuleList.title                                 = R\u00E8gles d'\u00E9tiquetages
 bcpg_bcpgmodel.type.bcpg_labelingTemplate.description                           = Liste des Marquages
 bcpg_bcpgmodel.type.bcpg_labelingTemplate.title                                 = Marquages
+bcpg_bcpgmodel.type.bcpg_laboratory.description                                 = Liste des laboratoires
+bcpg_bcpgmodel.type.bcpg_laboratory.title                                       = Laboratoires
 bcpg_bcpgmodel.type.bcpg_lca.description                                        = Analyses de cycle de vie (Administration)
 bcpg_bcpgmodel.type.bcpg_lca.title                                              = Analyses de cycle de vie
 bcpg_bcpgmodel.type.bcpg_lcaList.description                                    = Liste des ACV
